# stm32wlxx-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  crates.js  index.html  memory.x  on-target-ci.sh  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.config/: lingo.dic  spellcheck.toml
.github/workflows/: ci.yml  on-target.yml
adc-testsuite/: Cargo.toml
adc-testsuite/tests/: test.rs
aes/: Cargo.toml
aes-testsuite/: Cargo.toml
aes-testsuite/tests/: test.rs
aes/src/: lib.rs
ate/: Cargo.toml
ate/src/: lib.rs
ci/: testsuite-compile.sh
dac-testsuite/: Cargo.toml
dac-testsuite/tests/: test.rs
examples/: Cargo.toml
examples/examples/: adc-lpuart.rs  adc-temp.rs  adc-vbat.rs  async-aes.rs  buzzer.rs  clock.rs  gpio-blink.rs  gpio-button-irq.rs  gpio-button.rs  info.rs
examples/src/: aio.rs  lib.rs
gpio/: Cargo.toml
gpio/src/: lib.rs
hal/: Cargo.toml  README.md
hal/src/: adc.rs  aes.rs  dac.rs  dma.rs  flash.rs  fmt.rs  gpio.rs  i2c.rs  info.rs  lib.rs  macros.rs  periph_clk.rs  pka.rs  pwr.rs  ratio.rs  rcc.rs  rng.rs  rtc.rs  spi.rs  tim.rs  uart.rs  util.rs
hal/src/dma/: cr.rs  mod.rs
hal/src/lptim/: cfgr.rs  cr.rs  mod.rs
hal/src/rtc/: alarm.rs  mod.rs
hal/src/subghz/: bit_sync.rs  cad_params.rs  calibrate.rs  fallback_mode.rs  hse_trim.rs  irq.rs  lora_sync_word.rs  mod.rs  mod_params.rs  ocp.rs  op_error.rs  pa_config.rs  packet_params.rs  packet_status.rs  packet_type.rs  pkt_ctrl.rs  pmode.rs  pwr_ctrl.rs  radio.rs  reg_mode.rs  rf_frequency.rs  rfs.rs  rx_timeout_stop.rs  sleep_cfg.rs  smps.rs  standby_clk.rs  stats.rs  status.rs  sx126x.rs  tcxo_mode.rs  timeout.rs  tx_params.rs  value_error.rs
i2c-testsuite/: Cargo.toml
i2c-testsuite/tests/: test.rs
iface/: Cargo.toml
iface/src/: gpio.rs  lib.rs  spi.rs
implementors/embedded_hal/: trait.PwmPin.js
implementors/rand_core/: trait.CryptoRng.js  trait.RngCore.js
lora-e5-bsp/: Cargo.toml  README.md
lora-e5-bsp/src/: led.rs  lib.rs  pb.rs
lptim-testsuite/: Cargo.toml
lptim-testsuite/tests/: test.rs
nucleo-wl55jc-bsp/: Cargo.toml  README.md
nucleo-wl55jc-bsp/src/: led.rs  lib.rs  pb.rs
pka/: Cargo.toml
pka-testsuite/: Cargo.toml
pka-testsuite/tests/: test.rs
pka/src/: lib.rs
rcc/: Cargo.toml
rcc-testsuite/: Cargo.toml
rcc-testsuite/tests/: test.rs
rcc/src/: lib.rs
rng/: Cargo.toml
rng-testsuite/: Cargo.toml
rng-testsuite/tests/: test.rs
rng/src/: lib.rs
rtc-testsuite/: Cargo.toml
rtc-testsuite/tests/: test.rs
spi-testsuite/: Cargo.toml
spi-testsuite/tests/: test.rs
src/stm32wlxx_hal/: adc.rs.html  aes.rs.html  dac.rs.html  flash.rs.html  fmt.rs.html  gpio.rs.html  i2c.rs.html  info.rs.html  lib.rs.html  macros.rs.html  pka.rs.html  pwr.rs.html  ratio.rs.html  rcc.rs.html  rng.rs.html  spi.rs.html  uart.rs.html  util.rs.html
stm32wlxx_hal/: all.html  index.html  sidebar-items.js  struct.Ratio.html
stm32wlxx_hal/adc/: constant.TS_MIN_SAMPLE.html  constant.TS_START_MAX.html  constant.TS_START_TYP.html  constant.T_ADCVREG_SETUP.html  constant.T_ADCVREG_SETUP_MICROS.html  enum.Ch.html  enum.Clk.html  enum.OversampleRatio.html  enum.OversampleShift.html  enum.Ts.html  fn.vref_cal.html  index.html  sidebar-items.js  struct.Adc.html
stm32wlxx_hal/aes/: enum.Error.html  enum.SwapMode.html  index.html  sidebar-items.js  struct.Aes.html  struct.AesWrapClk.html
stm32wlxx_hal/dac/: enum.ModeChip.html  enum.ModePin.html  index.html  sidebar-items.js  struct.Dac.html
stm32wlxx_hal/dma/: enum.Dir.html  enum.Error.html  enum.Priority.html  enum.Size.html  index.html  sidebar-items.js  struct.AllDma.html  struct.Cr.html  struct.Dma1.html  struct.Dma1Ch1.html  struct.Dma1Ch2.html  struct.Dma1Ch3.html  struct.Dma1Ch4.html  struct.Dma1Ch5.html  struct.Dma1Ch6.html  struct.Dma1Ch7.html  struct.Dma2.html  struct.Dma2Ch1.html  struct.Dma2Ch2.html  struct.Dma2Ch3.html  struct.Dma2Ch4.html  struct.Dma2Ch5.html  struct.Dma2Ch6.html  struct.Dma2Ch7.html  trait.DmaCh.html
stm32wlxx_hal/flash/: constant.FLASH_START.html  enum.Error.html  fn.flash_end.html  fn.flash_range.html  fn.num_pages.html  index.html  sidebar-items.js  struct.AlignedAddr.html  struct.AlignedAddrError.html  struct.Flash.html  struct.Page.html
stm32wlxx_hal/gpio/: enum.ExtiTrg.html  enum.OutputType.html  enum.PinState.html  enum.Pull.html  enum.Speed.html  index.html  sidebar-items.js  struct.Analog.html  struct.Input.html  struct.Output.html  struct.OutputArgs.html  struct.PortA.html  struct.PortB.html  struct.PortC.html  struct.RfBusy.html  struct.RfIrq0.html  struct.RfIrq1.html  struct.RfIrq2.html  struct.RfNssDbg.html  struct.SgMisoDbg.html  struct.SgMosiDbg.html  struct.SgSckDbg.html  trait.Exti.html
stm32wlxx_hal/i2c/: enum.Error.html  index.html  sidebar-items.js  struct.I2c1.html  struct.I2c2.html  struct.I2c3.html
stm32wlxx_hal/info/: enum.Core.html  enum.Package.html  fn.flash_size.html  fn.flash_size_kibibyte.html  index.html  sidebar-items.js  struct.Uid.html  struct.Uid64.html
stm32wlxx_hal/lptim/: enum.Clk.html  enum.Filter.html  enum.Prescaler.html  enum.TrgPol.html  enum.TrgSel.html  enum.TrgSel3.html  index.html  sidebar-items.js  struct.Cfgr.html  struct.Cr.html  (+10 more)
subghz/: Cargo.toml
subghz-testsuite/: Cargo.toml
subghz-testsuite-assets/: Cargo.toml
subghz-testsuite-rx/: Cargo.toml
subghz-testsuite-tx/: Cargo.toml
subghz/src/: cad_params.rs  calibrate.rs  calibrate_image.rs  fallback_mode.rs  hse_trim.rs  irq.rs  lib.rs  lora_sync_word.rs  mod_params.rs  ocp.rs  op_error.rs  pa_config.rs  packet_params.rs  packet_status.rs  packet_type.rs  rf_frequency.rs  rx_timeout_stop.rs  sleep_cfg.rs  standby_clk.rs  stats.rs  status.rs  tcxo_mode.rs  timeout.rs  tx_params.rs  value_error.rs
subghz/tests/: test_mod_params.rs  test_pa_config.rs  test_rf_frequency.rs  test_stats.rs  test_timeout.rs
testsuite/: Cargo.toml  README.md  runall.py
testsuite/src/: adc.rs  aes.rs  dac.rs  flash.rs  i2c.rs  info.rs  lptim.rs  pka.rs  rcc.rs  rng.rs  rtc.rs  spi.rs  subghz.rs  uart.rs
uart-testsuite/: Cargo.toml
(+12601 files in other folders)
