[workspace]
resolver = "2"
members = [
    "adc-testsuite",
    "aes-testsuite",
    "dac-testsuite",
    "examples",
    "hal",
    "lora-e5-bsp",
    "nucleo-wl55jc-bsp",
    "pka-testsuite",
    "rng-testsuite",
    "subghz-testsuite",
]
default-members = ["hal"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3 
overflow-checks = false
