[package]
name = "stm32wl-hal"
description = "Hardware abstraction layer for the STM32WL series microcontrollers."
readme = "../README.md"

version = "0.1.0-alpha.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["arm", "cortex-m", "stm32", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/newAM/stm32wl-hal"

[features]
stm32wl5x_cm0p = ["stm32wl/stm32wl5x_cm0p"]
stm32wl5x_cm4 = ["stm32wl/stm32wl5x_cm4"]
stm32wle5 = ["stm32wl/stm32wle5"]
rt = ["stm32wl/rt", "cortex-m-rt"]
aio = ["futures", "futures-util", "rt"]

[dependencies]
cfg-if = "1"
rand_core = "0.6"
cortex-m = "0.7"
embedded-hal = "0.2"

[dependencies.num-rational]
version = "0.4"
default-features = false

[dependencies.stm32wl]
git = "https://github.com/newAM/stm32wl-rs.git"
rev = "239ceea719f2e26b70e8680f87a31b4a309b5ff8"

[dependencies.cortex-m-rt]
version = "0.6"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
optional = true

[dependencies.futures]
version = "0.3"
default-features = false
optional = true

[dependencies.defmt]
version = "0.2"
optional = true

[package.metadata.docs.rs]
all-features = false
features = ["aio", "stm32wl5x_cm4"]
rustdoc-args = ["--cfg", "docsrs"]
