[package]
name = "stm32wlxx-hal"
description = "Hardware abstraction layer for the STM32WL series microcontrollers."
readme = "../README.md"

# To update version change:
# * BSP versions
# * BSP HAL dependency versions
# * README
# * BSP READMES
# * lock file
# * CHANGELOG Unreleased (URL and header)
version = "0.6.1"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
rust-version = "1.60"  # update MSRV in CI, BSPs, and shield in README
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "stm32", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/stm32-rs/stm32wlxx-hal"

[features]
stm32wl5x_cm0p = ["stm32wl/stm32wl5x_cm0p"]
stm32wl5x_cm4 = ["stm32wl/stm32wl5x_cm4"]
stm32wle5 = ["stm32wl/stm32wle5"]
rt = ["stm32wl/rt", "cortex-m-rt"]

[dependencies]
cfg-if = "1"
chrono = { version = "0.4.20", default-features = false, optional = true }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7", optional = true }
defmt = { version = "0.3", optional = true }
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-time = { version = "0.12", optional = true }
nb = "1"
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
paste = "1"
rand_core = "0.6"
stm32wl = { version = "0.15.1", default-features = false }
void = { version = "1", default-features = false }

[dev-dependencies]
static_assertions = "1"

[package.metadata.docs.rs]
all-features = false
features = ["stm32wl5x_cm4", "rt", "embedded-time", "chrono"]
rustdoc-args = ["--cfg", "docsrs"]
