[package]
name = "lora-e5-bsp"
description = "Board support package for the seeed LoRa-E5 development kit"
readme = "README.md"

version = "0.2.1"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "stm32", "bsp", "seeed"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/stm32-rs/stm32wlxx-hal"

[features]
defmt = ["stm32wlxx-hal/defmt", "dfmt"]
embedded-time = ["stm32wlxx-hal/embedded-time"]
rt = ["stm32wlxx-hal/rt"]

[dependencies.stm32wlxx-hal]
version = "=0.2.1"
path = "../hal"
features = ["stm32wle5"]

[dependencies.dfmt]
package = "defmt"
version = "0.3"
optional = true

[package.metadata.docs.rs]
all-features = false
features = ["rt", "embedded-time"]
rustdoc-args = ["--cfg", "docsrs"]
