[package]
name = "lora-e5-bsp"
description = "Board support package for the seeed LoRa-E5 development kit"
readme = "README.md"
keywords = ["arm", "cortex-m", "stm32", "bsp", "seeed"]
categories = ["embedded", "hardware-support", "no-std"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
chrono = ["stm32wlxx-hal/chrono"]
defmt = ["stm32wlxx-hal/defmt", "dep:defmt"]
embedded-time = ["stm32wlxx-hal/embedded-time"]
rt = ["stm32wlxx-hal/rt"]

[dependencies.stm32wlxx-hal]
version = "=0.6.1"
path = "../hal"
features = ["stm32wle5"]

[dependencies.defmt]
version = "1"
optional = true

[package.metadata.docs.rs]
all-features = false
features = ["rt", "embedded-time", "chrono"]
rustdoc-args = ["--cfg", "docsrs"]
