[package]
name = "nucleo-wl55jc-bsp"
description = "Board support package for the NUCLEO-WL55JC"
readme = "README.md"

version = "0.2.1"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "stm32", "bsp", "nucleo"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/stm32-rs/stm32wlxx-hal"

[features]
defmt = ["stm32wlxx-hal/defmt", "dfmt"]
embedded-time = ["stm32wlxx-hal/embedded-time"]
rt = ["stm32wlxx-hal/rt"]
stm32wl5x_cm0p = ["stm32wlxx-hal/stm32wl5x_cm0p"]
stm32wl5x_cm4 = ["stm32wlxx-hal/stm32wl5x_cm4"]

[dependencies.stm32wlxx-hal]
version = "=0.2.1"
path = "../hal"

[dependencies.dfmt]
package = "defmt"
version = "0.3"
optional = true

[package.metadata.docs.rs]
all-features = false
features = ["stm32wl5x_cm4", "rt", "embedded-time"]
rustdoc-args = ["--cfg", "docsrs"]
