[package]
name = "nucleo-wl55jc-bsp"
description = "Board support package for the NUCLEO-WL55JC"
readme = "README.md"
keywords = ["arm", "cortex-m", "stm32", "bsp", "nucleo"]
categories = ["embedded", "hardware-support", "no-std"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
chrono = ["stm32wlxx-hal/chrono"]
defmt = ["stm32wlxx-hal/defmt", "dep:defmt"]
embedded-time = ["stm32wlxx-hal/embedded-time"]
rt = ["stm32wlxx-hal/rt"]
stm32wl5x_cm0p = ["stm32wlxx-hal/stm32wl5x_cm0p"]
stm32wl5x_cm4 = ["stm32wlxx-hal/stm32wl5x_cm4"]

[dependencies.stm32wlxx-hal]
version = "=0.6.1"
path = "../hal"

[dependencies.defmt]
version = "0.3"
optional = true

[package.metadata.docs.rs]
all-features = false
features = ["stm32wl5x_cm4", "rt", "embedded-time", "chrono"]
rustdoc-args = ["--cfg", "docsrs"]
