[package]
name = "stm32wl-hal-subghz"
description = "STM32WL Sub-GHz HAL"

version = "0.1.0-alpha.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["arm", "cortex-m", "stm32", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/newAM/stm32wl-hal"

[features]
stm32wl5x_cm0p = ["stm32wl/stm32wl5x_cm0p"]
stm32wl5x_cm4 = ["stm32wl/stm32wl5x_cm4"]
stm32wle5 = ["stm32wl/stm32wle5"]

[dependencies]
cfg-if = "^1"

[dependencies.num-rational]
version = "0.4"
default-features = false

[dependencies.stm32wl]
git = "https://github.com/newAM/stm32wl-rs.git"
rev = "9a4201bbb48cb7a4eef01d8b4abed23d3c7f23e4"
